tests/reference/asr-func_02-b439474.stderr
semantic error: Assignment to an input function parameter `n` is not allowed
 --> tests/errors/func_02.py:4:5
  |
4 |     n = 5
  |     ^ Hint: create a new local variable with a different name


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
